Changes for mobile layout issue

--- a/app/assets/stylesheets/components/mobile_responsive/_main.scss
+++ b/app/assets/stylesheets/components/mobile_responsive/_main.scss
@@ -8,8 +8,6 @@ main { min-height: 420px !important; margin-top: 0 !important; }
 
 .main-toggle-animation {
   position: absolute;
-  left: 1000px;
-  display: none;
 }
 
 .hover_effect {
